# img

./: .env.example  .gitignore  LICENSE  config.example.json  main.py  pyproject.toml  schema.json  story copy.py  tts copy.py
img/: __init__.py  audio.py  config.py  content.py  filter.py  gemini.py  img.py  story.py  test.py  tts.py  tttsss.py  types.py  video.py
img/test/: simple.py  tttsss.py
